qisun-poc/ResourceManager/AzureRM.Network/v0.9.8/AzureRM.Network.md
---
Module Name: AzureRM.Network
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 2.0.2.0
Locale: en-US
updated_at: 10/19/2016 3:33 AM
ms.date: 10/19/2016
content_git_url: https://github.com/SummerSun/azure-docs-powershell-int/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v0.9.8/AzureRM.Network.md
gitcommit: https://github.com/SummerSun/azure-docs-powershell-int/blob/c0d1e448da01261236e9ece01ca5c2a98effbf31/azureps-cmdlets-docs/ResourceManager/AzureRM.Network/v0.9.8/AzureRM.Network.md
ms.topic: conceptual
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, cmdlet
manager: visual-studio-china
---

# AzureRM.Network Module
## Description
This topic displays help topics for the Azure Network Cmdlets. 

## AzureRM.Network Cmdlets
### [Add-AzureApplicationGatewayBackendAddressPool](.\Add-AzureApplicationGatewayBackendAddressPool.md)
Adds a back-end address pool to an application gateway.


### [Add-AzureApplicationGatewayBackendHttpSettings](.\Add-AzureApplicationGatewayBackendHttpSettings.md)



### [Add-AzureApplicationGatewayFrontendIPConfig](.\Add-AzureApplicationGatewayFrontendIPConfig.md)
Adds a front-end IP configuration to an application gateway.


### [Add-AzureApplicationGatewayFrontendPort](.\Add-AzureApplicationGatewayFrontendPort.md)
Adds a front-end port to an application gateway.


### [Add-AzureApplicationGatewayHttpListener](.\Add-AzureApplicationGatewayHttpListener.md)
Adds an HTTP listener to an application gateway.


### [Add-AzureApplicationGatewayIPConfiguration](.\Add-AzureApplicationGatewayIPConfiguration.md)
Adds an IP configuration to an application gateway.


### [Add-AzureApplicationGatewayRequestRoutingRule](.\Add-AzureApplicationGatewayRequestRoutingRule.md)
Adds a request routing rule to an application gateway.


### [Add-AzureApplicationGatewaySslCertificate](.\Add-AzureApplicationGatewaySslCertificate.md)
Adds an SSL certificate to an application gateway.


### [Add-AzureLoadBalancerBackendAddressPoolConfig](.\Add-AzureLoadBalancerBackendAddressPoolConfig.md)
Adds a backend address pool configuration to a load balancer.


### [Add-AzureLoadBalancerFrontendIpConfig](.\Add-AzureLoadBalancerFrontendIpConfig.md)
Adds a front-end IP configuration to a load balancer.


### [Add-AzureLoadBalancerInboundNatRuleConfig](.\Add-AzureLoadBalancerInboundNatRuleConfig.md)
Adds an inbound NAT rule configuration to a load balancer.


### [Add-AzureLoadBalancerProbeConfig](.\Add-AzureLoadBalancerProbeConfig.md)
Adds a probe configuration to a load balancer.


### [Add-AzureLoadBalancerRuleConfig](.\Add-AzureLoadBalancerRuleConfig.md)
Adds a rule configuration to a load balancer.


### [Add-AzureNetworkSecurityRuleConfig](.\Add-AzureNetworkSecurityRuleConfig.md)
Adds a network security rule configuration to a network security group.


### [Add-AzureRouteConfig](.\Add-AzureRouteConfig.md)
Adds a route to a route table.


### [Add-AzureVirtualNetworkSubnetConfig](.\Add-AzureVirtualNetworkSubnetConfig.md)
Adds a subnet configuration to a virtual network.


### [Get-AzureApplicationGatewayBackendAddressPool](.\Get-AzureApplicationGatewayBackendAddressPool.md)
Gets a back-end address pool for an application gateway.


### [Get-AzureApplicationGatewayBackendHttpSettings](.\Get-AzureApplicationGatewayBackendHttpSettings.md)
Gets the back-end HTTP settings of an application gateway.


### [Get-AzureApplicationGatewayFrontendIPConfig](.\Get-AzureApplicationGatewayFrontendIPConfig.md)
Gets the front-end IP configuration of an application gateway.


### [Get-AzureApplicationGatewayFrontendPort](.\Get-AzureApplicationGatewayFrontendPort.md)
Gets the front-end port of an application gateway.


### [Get-AzureApplicationGatewayHttpListener](.\Get-AzureApplicationGatewayHttpListener.md)
Gets the HTTP listener of an application gateway.


### [Get-AzureApplicationGatewayIPConfiguration](.\Get-AzureApplicationGatewayIPConfiguration.md)
Gets the IP configuration of an application gateway.


### [Get-AzureApplicationGatewayRequestRoutingRule](.\Get-AzureApplicationGatewayRequestRoutingRule.md)
Gets the request routing rule of an application gateway.


### [Get-AzureApplicationGatewaySku](.\Get-AzureApplicationGatewaySku.md)
Gets the SKU of an application gateway.


### [Get-AzureApplicationGatewaySslCertificate](.\Get-AzureApplicationGatewaySslCertificate.md)
Gets an SSL certificate for an application gateway.


### [Get-AzureApplicationGateway](.\Get-AzureApplicationGateway.md)
Gets an application gateway.


### [Get-AzureLoadBalancerBackendAddressPoolConfig](.\Get-AzureLoadBalancerBackendAddressPoolConfig.md)
Gets a backend address pool configuration for a load balancer.


### [Get-AzureLoadBalancerFrontendIpConfig](.\Get-AzureLoadBalancerFrontendIpConfig.md)
Gets a front-end IP configuration in a load balancer.


### [Get-AzureLoadBalancerInboundNatRuleConfig](.\Get-AzureLoadBalancerInboundNatRuleConfig.md)
Gets an inbound NAT rule configuration for a load balancer.


### [Get-AzureLoadBalancerProbeConfig](.\Get-AzureLoadBalancerProbeConfig.md)
Gets a probe configuration for a load balancer.


### [Get-AzureLoadBalancerRuleConfig](.\Get-AzureLoadBalancerRuleConfig.md)
Gets the rule configuration for a load balancer.


### [Get-AzureLoadBalancer](.\Get-AzureLoadBalancer.md)
Gets a load balancer.


### [Get-AzureLocalNetworkGateway](.\Get-AzureLocalNetworkGateway.md)



### [Get-AzureNetworkInterface](.\Get-AzureNetworkInterface.md)
Gets a network interface.


### [Get-AzureNetworkSecurityGroup](.\Get-AzureNetworkSecurityGroup.md)
Gets a network security group.


### [Get-AzureNetworkSecurityRuleConfig](.\Get-AzureNetworkSecurityRuleConfig.md)
Get a network security rule configuration for a network security group.


### [Get-AzurePublicIpAddress](.\Get-AzurePublicIpAddress.md)
Gets a public IP address.


### [Get-AzureRouteConfig](.\Get-AzureRouteConfig.md)
Gets routes from a route table.


### [Get-AzureRouteTable](.\Get-AzureRouteTable.md)
Gets route tables.


### [Get-AzureVirtualNetworkGatewayConnectionSharedKey](.\Get-AzureVirtualNetworkGatewayConnectionSharedKey.md)



### [Get-AzureVirtualNetworkGatewayConnection](.\Get-AzureVirtualNetworkGatewayConnection.md)



### [Get-AzureVirtualNetworkGateway](.\Get-AzureVirtualNetworkGateway.md)



### [Get-AzureVirtualNetworkSubnetConfig](.\Get-AzureVirtualNetworkSubnetConfig.md)
Gets a subnet in a virtual network.


### [Get-AzureVirtualNetwork](.\Get-AzureVirtualNetwork.md)
Gets a virtual network in a resource group.


### [New-AzureApplicationGatewayBackendAddressPool](.\New-AzureApplicationGatewayBackendAddressPool.md)
Creates a back-end address pool for an application gateway.


### [New-AzureApplicationGatewayBackendHttpSettings](.\New-AzureApplicationGatewayBackendHttpSettings.md)
Creates back-end HTTP settings for an application gateway.


### [New-AzureApplicationGatewayFrontendIPConfig](.\New-AzureApplicationGatewayFrontendIPConfig.md)
Creates a front-end IP configuration for an application gateway.


### [New-AzureApplicationGatewayFrontendPort](.\New-AzureApplicationGatewayFrontendPort.md)
Creates a front-end port for an application gateway.


### [New-AzureApplicationGatewayHttpListener](.\New-AzureApplicationGatewayHttpListener.md)
Creates an HTTP listener for an application gateway.


### [New-AzureApplicationGatewayIPConfiguration](.\New-AzureApplicationGatewayIPConfiguration.md)
Creates an IP configuration for an application gateway.


### [New-AzureApplicationGatewayRequestRoutingRule](.\New-AzureApplicationGatewayRequestRoutingRule.md)
Creates a request routing rule for an application gateway.


### [New-AzureApplicationGatewaySku](.\New-AzureApplicationGatewaySku.md)
Creates a SKU for an application gateway.


### [New-AzureApplicationGatewaySslCertificate](.\New-AzureApplicationGatewaySslCertificate.md)
Creates an SSL certificate for an Azure application gateway.


### [New-AzureApplicationGateway](.\New-AzureApplicationGateway.md)
Creates an application gateway.


### [New-AzureLoadBalancerBackendAddressPoolConfig](.\New-AzureLoadBalancerBackendAddressPoolConfig.md)
Creates a backend address pool configuration for a load balancer.


### [New-AzureLoadBalancerFrontendIpConfig](.\New-AzureLoadBalancerFrontendIpConfig.md)
Creates a front-end IP configuration for a load balancer.


### [New-AzureLoadBalancerInboundNatRuleConfig](.\New-AzureLoadBalancerInboundNatRuleConfig.md)
Creates an inbound NAT rule configuration for a load balancer.


### [New-AzureLoadBalancerProbeConfig](.\New-AzureLoadBalancerProbeConfig.md)
Creates a probe configuration for a load balancer.


### [New-AzureLoadBalancerRuleConfig](.\New-AzureLoadBalancerRuleConfig.md)
Creates a rule configuration for a load balancer.


### [New-AzureLoadBalancer](.\New-AzureLoadBalancer.md)
Creates a load balancer.


### [New-AzureLocalNetworkGateway](.\New-AzureLocalNetworkGateway.md)



### [New-AzureNetworkInterface](.\New-AzureNetworkInterface.md)
Creates a network interface.


### [New-AzureNetworkSecurityGroup](.\New-AzureNetworkSecurityGroup.md)
Creates a network security group.


### [New-AzureNetworkSecurityRuleConfig](.\New-AzureNetworkSecurityRuleConfig.md)
Creates a network security rule configuration.


### [New-AzurePublicIpAddress](.\New-AzurePublicIpAddress.md)
Creates a public IP address.


### [New-AzureRouteConfig](.\New-AzureRouteConfig.md)
Creates a route for a route table.


### [New-AzureRouteTable](.\New-AzureRouteTable.md)
Creates a route table.


### [New-AzureVirtualNetworkGatewayConnection](.\New-AzureVirtualNetworkGatewayConnection.md)



### [New-AzureVirtualNetworkGatewayIpConfig](.\New-AzureVirtualNetworkGatewayIpConfig.md)



### [New-AzureVirtualNetworkGateway](.\New-AzureVirtualNetworkGateway.md)



### [New-AzureVirtualNetworkSubnetConfig](.\New-AzureVirtualNetworkSubnetConfig.md)
Creates a virtual network subnet configuration.


### [New-AzureVirtualNetwork](.\New-AzureVirtualNetwork.md)
Creates a virtual network.


### [Remove-AzureApplicationGatewayBackendAddressPool](.\Remove-AzureApplicationGatewayBackendAddressPool.md)
Removes a back-end address pool from an application gateway.


### [Remove-AzureApplicationGatewayBackendHttpSettings](.\Remove-AzureApplicationGatewayBackendHttpSettings.md)
Removes back-end HTTP settings from an application gateway.


### [Remove-AzureApplicationGatewayFrontendIPConfig](.\Remove-AzureApplicationGatewayFrontendIPConfig.md)
Removes a front-end IP configuration from an application gateway.


### [Remove-AzureApplicationGatewayFrontendPort](.\Remove-AzureApplicationGatewayFrontendPort.md)
Removes a front-end port from an application gateway.


### [Remove-AzureApplicationGatewayHttpListener](.\Remove-AzureApplicationGatewayHttpListener.md)
Removes an HTTP listener from an application gateway.


### [Remove-AzureApplicationGatewayIPConfiguration](.\Remove-AzureApplicationGatewayIPConfiguration.md)
Removes an IP configuration from an application gateway.


### [Remove-AzureApplicationGatewayRequestRoutingRule](.\Remove-AzureApplicationGatewayRequestRoutingRule.md)
Removes a request routing rule from an application gateway.


### [Remove-AzureApplicationGatewaySslCertificate](.\Remove-AzureApplicationGatewaySslCertificate.md)
Removes an SSL certificate from an Azure application gateway.


### [Remove-AzureApplicationGateway](.\Remove-AzureApplicationGateway.md)
Removes an application gateway.


### [Remove-AzureLoadBalancerBackendAddressPoolConfig](.\Remove-AzureLoadBalancerBackendAddressPoolConfig.md)
Removes a backend address pool configuration from a load balancer.


### [Remove-AzureLoadBalancerFrontendIpConfig](.\Remove-AzureLoadBalancerFrontendIpConfig.md)
Removes a front-end IP configuration from a load balancer.


### [Remove-AzureLoadBalancerInboundNatRuleConfig](.\Remove-AzureLoadBalancerInboundNatRuleConfig.md)
Removes an inbound NAT rule configuration from a load balancer.


### [Remove-AzureLoadBalancerProbeConfig](.\Remove-AzureLoadBalancerProbeConfig.md)
Removes a probe configuration from a load balancer.


### [Remove-AzureLoadBalancerRuleConfig](.\Remove-AzureLoadBalancerRuleConfig.md)
Removes a rule configuration for a load balancer.


### [Remove-AzureLoadBalancer](.\Remove-AzureLoadBalancer.md)
Removes a load balancer.


### [Remove-AzureLocalNetworkGateway](.\Remove-AzureLocalNetworkGateway.md)



### [Remove-AzureNetworkInterface](.\Remove-AzureNetworkInterface.md)
Removes a network interface.


### [Remove-AzureNetworkSecurityGroup](.\Remove-AzureNetworkSecurityGroup.md)
Removes a network security group.


### [Remove-AzureNetworkSecurityRuleConfig](.\Remove-AzureNetworkSecurityRuleConfig.md)
Removes a network security rule from a network security group.


### [Remove-AzurePublicIpAddress](.\Remove-AzurePublicIpAddress.md)
Removes a public IP address.


### [Remove-AzureRouteConfig](.\Remove-AzureRouteConfig.md)
Removes a route from a route table.


### [Remove-AzureRouteTable](.\Remove-AzureRouteTable.md)
Removes a route table.


### [Remove-AzureVirtualNetworkGatewayConnection](.\Remove-AzureVirtualNetworkGatewayConnection.md)



### [Remove-AzureVirtualNetworkGateway](.\Remove-AzureVirtualNetworkGateway.md)



### [Remove-AzureVirtualNetworkSubnetConfig](.\Remove-AzureVirtualNetworkSubnetConfig.md)
Removes a subnet configuration from a virtual network.


### [Remove-AzureVirtualNetwork](.\Remove-AzureVirtualNetwork.md)
Removes a virtual network.


### [Reset-AzureVirtualNetworkGatewayConnectionSharedKey](.\Reset-AzureVirtualNetworkGatewayConnectionSharedKey.md)



### [Reset-AzureVirtualNetworkGateway](.\Reset-AzureVirtualNetworkGateway.md)



### [Set-AzureApplicationGatewayBackendAddressPool](.\Set-AzureApplicationGatewayBackendAddressPool.md)
Updates a back-end address pool for an application gateway.


### [Set-AzureApplicationGatewayBackendHttpSettings](.\Set-AzureApplicationGatewayBackendHttpSettings.md)
Updates back-end HTTP settings for an application gateway.


### [Set-AzureApplicationGatewayFrontendIPConfig](.\Set-AzureApplicationGatewayFrontendIPConfig.md)
Modifies a front-end IP address configuration.


### [Set-AzureApplicationGatewayFrontendPort](.\Set-AzureApplicationGatewayFrontendPort.md)
Modifies a front-end port for an application gateway.


### [Set-AzureApplicationGatewayHttpListener](.\Set-AzureApplicationGatewayHttpListener.md)
Modifies an HTTP listener for an application gateway.


### [Set-AzureApplicationGatewayIPConfiguration](.\Set-AzureApplicationGatewayIPConfiguration.md)
Modifies an IP configuration for an application gateway.


### [Set-AzureApplicationGatewayRequestRoutingRule](.\Set-AzureApplicationGatewayRequestRoutingRule.md)
Modifies a request routing rule for an application gateway.


### [Set-AzureApplicationGatewaySku](.\Set-AzureApplicationGatewaySku.md)
Modifies the SKU of an application gateway.


### [Set-AzureApplicationGatewaySslCertificate](.\Set-AzureApplicationGatewaySslCertificate.md)
Sets the goal state of an SSL certificate.


### [Set-AzureApplicationGateway](.\Set-AzureApplicationGateway.md)
Updates an application gateway.


### [Set-AzureLoadBalancerFrontendIpConfig](.\Set-AzureLoadBalancerFrontendIpConfig.md)
Sets the goal state for a front-end IP configuration in a load balancer.


### [Set-AzureLoadBalancerInboundNatRuleConfig](.\Set-AzureLoadBalancerInboundNatRuleConfig.md)
Sets an inbound NAT rule configuration for a load balancer.


### [Set-AzureLoadBalancerProbeConfig](.\Set-AzureLoadBalancerProbeConfig.md)
Sets the goal state for a probe configuration.


### [Set-AzureLoadBalancerRuleConfig](.\Set-AzureLoadBalancerRuleConfig.md)
Sets the goal state for a load balancer rule configuration.


### [Set-AzureLoadBalancer](.\Set-AzureLoadBalancer.md)
Sets the goal state for a load balancer.


### [Set-AzureLocalNetworkGateway](.\Set-AzureLocalNetworkGateway.md)



### [Set-AzureNetworkInterface](.\Set-AzureNetworkInterface.md)
Sets the goal state for a network interface.


### [Set-AzureNetworkSecurityGroup](.\Set-AzureNetworkSecurityGroup.md)
Sets the goal state for a network security group.


### [Set-AzureNetworkSecurityRuleConfig](.\Set-AzureNetworkSecurityRuleConfig.md)
Sets the goal state for a network security rule configuration.


### [Set-AzurePublicIpAddress](.\Set-AzurePublicIpAddress.md)
Sets the goal state for a public IP address.


### [Set-AzureRouteConfig](.\Set-AzureRouteConfig.md)
Sets the goal state for a route.


### [Set-AzureRouteTable](.\Set-AzureRouteTable.md)
Sets the goal state for a route table.


### [Set-AzureVirtualNetworkGatewayConnectionSharedKey](.\Set-AzureVirtualNetworkGatewayConnectionSharedKey.md)



### [Set-AzureVirtualNetworkGatewayConnection](.\Set-AzureVirtualNetworkGatewayConnection.md)



### [Set-AzureVirtualNetworkSubnetConfig](.\Set-AzureVirtualNetworkSubnetConfig.md)
Sets the goal state for a subnet configuration in a virtual network.


### [Set-AzureVirtualNetwork](.\Set-AzureVirtualNetwork.md)
Sets the goal state for a virtual network.


### [Start-AzureApplicationGateway](.\Start-AzureApplicationGateway.md)
Starts an application gateway.


### [Stop-AzureApplicationGateway](.\Stop-AzureApplicationGateway.md)
Stops an application gateway


### [Test-AzureDnsAvailability](.\Test-AzureDnsAvailability.md)




